--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <div class="content">
             <img class="lastico" src="./assets/image/menu.png">
             <div class="divlast">
-                <div class="divlast">
+                <div class="divlaster">
                     <ul class="ullast">
                         <li>Some food has looked so awful<br> that it's looked like something that the<br> dog's brought
                             home.</li>
@@ -221,10 +221,12 @@
                 </div>
                 <div class="divlaster">
                     <h4>Newsletter</h4>
+                    <div class="footer__flex">
                     <form class="div-inputer" >
                         <input class="lasttext" type="email" placeholder="ВАШ E-MAIL">
                         <button class="lastbutton">Subscribe</button>
                     </form >
+                    </div>
                     <div class="paypall">
                         <div>
                             <img src="./assets/image/paypall.png">
